[gd_scene load_steps=19 format=3 uid="uid://dmlpvjyai521d"]

[ext_resource type="Script" path="res://Scenes/Menus/CharacterMenu/MenuPages/InventoryPage/inventory_menu_page_control.gd" id="1_j4lhh"]
[ext_resource type="Texture2D" uid="uid://gxk1dw0hkyuj" path="res://Scenes/Menus/CharacterMenu/MenuPages/InventoryPage/InvBoxBackground_working.png" id="2_e5pw5"]
[ext_resource type="Theme" uid="uid://dwinll8pgdjhc" path="res://Scenes/Themes/standard_theme.tres" id="3_e4t5p"]
[ext_resource type="PackedScene" uid="uid://bpvy87uagttpr" path="res://Scenes/UiNodes/ScollBar/scroll_bar.tscn" id="5_0hjxr"]
[ext_resource type="Script" path="res://Scenes/Menus/CharacterMenu/MenuPages/InventoryPage/sub_group_container.gd" id="6_5pha8"]
[ext_resource type="Script" path="res://Scenes/Menus/CharacterMenu/MenuPages/InventoryPage/inventory_item_button_control.gd" id="7_1h41b"]
[ext_resource type="Texture2D" uid="uid://bibqsudhjw4qe" path="res://assets/Sprites/Paper/Mundane_Background.png" id="7_bemus"]
[ext_resource type="Texture2D" uid="uid://cm3afo1rfa56g" path="res://assets/Sprites/Paper/PaperButton_64.png" id="7_bit48"]
[ext_resource type="Texture2D" uid="uid://cegwhar55vupc" path="res://assets/Sprites/Paper/Common_Background.png" id="8_7dlh3"]
[ext_resource type="Texture2D" uid="uid://du85tsvalwqdr" path="res://assets/Sprites/Paper/Rare_Background.png" id="9_4duyt"]
[ext_resource type="Texture2D" uid="uid://bkjy2j6ra337v" path="res://assets/Sprites/UI/SymbolIcons/EquiptIcon.png" id="9_a4qxi"]
[ext_resource type="Texture2D" uid="uid://b81lqrxyq30xy" path="res://assets/Sprites/Paper/Legend_Background.png" id="10_a6hxn"]
[ext_resource type="Texture2D" uid="uid://0wkhsf2kgce1" path="res://assets/Sprites/UI/BackPatches/Patch_12_4_Dark.png" id="10_nckkb"]
[ext_resource type="Script" path="res://Scenes/UiNodes/FitScaleLabel/fit_scale_label.gd" id="12_3jefk"]
[ext_resource type="Texture2D" uid="uid://d28r048mh6136" path="res://assets/Sprites/UnknownSprite.png" id="12_iktx4"]
[ext_resource type="Texture2D" uid="uid://w8cgm1tj35ld" path="res://Scenes/Menus/CharacterMenu/MenuPages/InventoryPage/HoleOutline.png" id="12_qpq5w"]
[ext_resource type="Script" path="res://Scenes/UiNodes/loaded_option_button.gd" id="13_32pmb"]
[ext_resource type="Texture2D" uid="uid://3ncohf5a6kf7" path="res://Scenes/Menus/CharacterMenu/HoleBackground.png" id="13_pu80u"]

[node name="InventoryPage" type="Control" node_paths=PackedStringArray("scroll_container", "items_container", "scroll_bar", "inventory_box_highlight", "filter_option_button", "premade_inventory_sub_group", "premade_item_button")]
custom_minimum_size = Vector2(280, 395)
layout_mode = 3
anchors_preset = 0
offset_right = 280.0
offset_bottom = 395.0
mouse_filter = 1
script = ExtResource("1_j4lhh")
min_button_size = Vector2i(64, 64)
max_button_size = Vector2i(96, 96)
scroll_container = NodePath("BoxBackground/ScrollContainer")
items_container = NodePath("BoxBackground/ScrollContainer/VBoxContainer")
scroll_bar = NodePath("ScrollBar")
inventory_box_highlight = NodePath("BoxBackground/NinePatchRect")
filter_option_button = NodePath("FilterOptionButton")
premade_inventory_sub_group = NodePath("BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer")
premade_item_button = NodePath("BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer/FlowContainer/InventoryItemButton")

[node name="Background" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_e5pw5")
region_rect = Rect2(0, 0, 140, 124)
patch_margin_left = 38
patch_margin_top = 38
patch_margin_right = 54
patch_margin_bottom = 38

[node name="ScrollBar" parent="." node_paths=PackedStringArray("scroll_container") instance=ExtResource("5_0hjxr")]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 16.0
offset_right = 0.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 2
scroll_container = NodePath("../BoxBackground/ScrollContainer")

[node name="BoxBackground" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 17.0
offset_right = -32.0
offset_bottom = -16.0
texture = ExtResource("13_pu80u")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="NinePatchRect" type="NinePatchRect" parent="BoxBackground"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_qpq5w")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="BoxBackground"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BoxBackground/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubGroupContainer" type="VBoxContainer" parent="BoxBackground/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("label", "inner_container")]
layout_mode = 2
script = ExtResource("6_5pha8")
label = NodePath("SubGroupLabel")
inner_container = NodePath("FlowContainer")

[node name="SubGroupLabel" type="Label" parent="BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer"]
layout_mode = 2
theme = ExtResource("3_e4t5p")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Passives"
text_overrun_behavior = 3

[node name="FlowContainer" type="FlowContainer" parent="BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
alignment = 1
last_wrap_alignment = 1

[node name="InventoryItemButton" type="Control" parent="BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer/FlowContainer" node_paths=PackedStringArray("item_icon_rect", "equipt_icon", "count_label", "button", "name_label", "background")]
custom_minimum_size = Vector2(68, 84)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("7_1h41b")
item_icon_rect = NodePath("ItemIcon")
equipt_icon = NodePath("EquiptIcon")
count_label = NodePath("CountLabel")
button = NodePath("Button")
name_label = NodePath("NinePatchRect/FitScaleLabel")
background = NodePath("Background")
mundane_background = ExtResource("7_bemus")
common_background = ExtResource("8_7dlh3")
rare_background = ExtResource("9_4duyt")
legend_background = ExtResource("10_a6hxn")

[node name="Background" type="TextureRect" parent="BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer/FlowContainer/InventoryItemButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_bit48")

[node name="ItemIcon" type="TextureRect" parent="BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer/FlowContainer/InventoryItemButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_iktx4")

[node name="EquiptIcon" type="TextureRect" parent="BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer/FlowContainer/InventoryItemButton"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_top = 49.0
offset_right = 3.0
offset_bottom = 70.0
grow_horizontal = 0
texture = ExtResource("9_a4qxi")

[node name="CountLabel" type="Label" parent="BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer/FlowContainer/InventoryItemButton"]
layout_direction = 3
layout_mode = 0
offset_left = 3.0
offset_top = 49.0
offset_right = 11.0
offset_bottom = 69.0
theme = ExtResource("3_e4t5p")
text = "1"
horizontal_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer/FlowContainer/InventoryItemButton/CountLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_nckkb")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="NinePatchRect" type="NinePatchRect" parent="BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer/FlowContainer/InventoryItemButton"]
custom_minimum_size = Vector2(64, 18)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -15.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("10_nckkb")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="FitScaleLabel" type="Control" parent="BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer/FlowContainer/InventoryItemButton/NinePatchRect" node_paths=PackedStringArray("label")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 2.0
offset_right = -6.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_3jefk")
label = NodePath("Label")
text = "Test THing"
center_x = true

[node name="Label" type="Label" parent="BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer/FlowContainer/InventoryItemButton/NinePatchRect/FitScaleLabel"]
layout_mode = 0
offset_right = 129.0
offset_bottom = 30.0
scale = Vector2(0.434109, 0.434109)
theme = ExtResource("3_e4t5p")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Test THing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="BoxBackground/ScrollContainer/VBoxContainer/SubGroupContainer/FlowContainer/InventoryItemButton"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubGroupControl" type="Control" parent="BoxBackground/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="FilterOptionButton" type="OptionButton" parent="."]
visible = false
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_left = 20.0
offset_top = 13.0
offset_right = 232.0
offset_bottom = 45.0
text_overrun_behavior = 3
fit_to_longest_item = false
script = ExtResource("13_32pmb")
